Basic code to import pictures from camera.
The camera needs to be on when Solang is invoked. This problem will
be fixed later.

--- a/configure.ac
+++ b/configure.ac
@@ -31,6 +31,7 @@ PKG_CHECK_MODULES(GDAMM, [libgdamm-3.0])
 PKG_CHECK_MODULES(GDL, [gdl-1.0])
 PKG_CHECK_MODULES(GIOMM, [giomm-2.4])
 PKG_CHECK_MODULES(GLIBMM, [glibmm-2.4])
+PKG_CHECK_MODULES(GPHOTO2, [libgphoto2])
 PKG_CHECK_MODULES(GTKMM, [gtkmm-2.4 >= 2.8])
 
 PKG_CHECK_MODULES(IMAGEMAGICK, [GraphicsMagick++],,
