Basic enlarged renderer.
+ A new dependency on GtkImageView, which is used to render the photos
  has been introduced.
+ Activating a photo on the browser renderer does not automatically
  switch over to the enlarged renderer. Once we are able to control
  the tab switching we can lazy allocate a bunch of objects that are
  now being initialized on start-up.
+ New icons from F-Spot.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -5,6 +5,9 @@ pixmap_DATA = \
     mode-browse-24.png \
     mode-browse-32.png \
     mode-browse.svg \
+    mode-image-edit-16.png \
+    mode-image-edit-22.png \
+    mode-image-edit-24.png \
     tag-16.png \
     tag-22.png \
     tag-new-16.png \
