--- a/src/application/Makefile.am
+++ b/src/application/Makefile.am
@@ -20,6 +20,7 @@ solang_LDADD = \
 	$(top_builddir)/src/common/libcommon.la \
 	$(EXIV2_LIBS) \
 	$(GPHOTO2_LIBS) \
+	$(GTKIMAGEVIEW_LIBS) \
 	$(GTKMM_LIBS) \
 	$(CAIROMM_LIBS) \
 	$(GDAMM_LIBS) \
@@ -45,6 +46,7 @@ AM_CPPFLAGS = \
 	$(CAIROMM_CFLAGS) \
 	$(EXIV2_CFLAGS) \
 	$(GPHOTO2_CFLAGS) \
+	$(GTKIMAGEVIEW_CFLAGS) \
 	$(GTKMM_CFLAGS) \
 	$(GDAMM_CFLAGS) \
 	$(GIOMM_CFLAGS) \
