Proper handling of multiple types of queries
- A type was added to denote the type of clubbing
- Convenience functions were added to query-criteria interface
- Automatic ID generation for all query types have been added
- ID and Clubbing types are now used by the database to
  create queries

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -3,6 +3,9 @@ noinst_LTLIBRARIES =	libcommon.la
 libcommon_la_SOURCES = \
 	error.cpp \
 	error.h \
+	id-counted-base.h \
+	id-repo.cpp \
+	id-repo.h \
 	i-photo-destination.cpp \
 	i-photo-destination.h \
 	i-photo-source.cpp \
