--- a/src/attribute/Makefile.am
+++ b/src/attribute/Makefile.am
@@ -5,8 +5,14 @@ libattribute_la_SOURCES = \
 	basic-exif-view-model-column-record.h \
 	basic-exif-view.cpp \
 	basic-exif-view.h \
+	date-manager.cpp \
+	date-manager.h \
 	date-photo-info.cpp \
 	date-photo-info.h \
+	date-view-model-column-record.cpp \
+	date-view-model-column-record.h \
+	date-view.cpp \
+	date-view.h \
 	exif-data-key.cpp \
 	exif-data-key.h \
 	exif-data.cpp \
