Added UI elements for navigating within the enlarged renderer.
Added a Go menu with following items:
    + Previous Photo
    + Next Photo
    + First Photo
    + Last Photo

Previous and Next have been added to the toolbar as well.

Signed-off-by: Santanu Sinha <santanu@powerbook.(none)>

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -17,6 +17,7 @@ pixmap_DATA = \
 uidir = $(datadir)/$(PACKAGE_NAME)/ui
 ui_DATA = \
     solang.ui \
+    solang-enlarged-renderer.ui \
     solang-tag-manager.ui \
     solang-importer.ui \
     solang-thumbnail-popup.ui
