Expressed the layout in XML.
Expressing the GdlDockLayout in XML is much more easier than doing it
in code, and will make it easy to rip off portions of the layout and
then restore them later during certain operations, like fullscreening
and slideshowing.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,3 +1,7 @@
+layoutdir = $(datadir)/$(PACKAGE_NAME)
+layout_DATA = \
+    solang-layout.xml
+
 pixmapdir = $(datadir)/$(PACKAGE_NAME)/pixmaps
 pixmap_DATA = \
     mode-browse-16.png \
@@ -23,5 +27,6 @@ ui_DATA = \
     solang-thumbnail-popup.ui
 
 EXTRA_DIST = \
+    $(layout_DATA) \
     $(pixmap_DATA) \
     $(ui_DATA)
