Set program name and application name.
Glib::get_application_name, PACKAGE and PACKAGE_NAME will evaluate
to 'Solang', while Glib::get_prgname and PACKAGE_TARNAME will
evaluate to 'solang'.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,8 +1,8 @@
-layoutdir = $(datadir)/$(PACKAGE_NAME)
+layoutdir = $(datadir)/$(PACKAGE_TARNAME)
 layout_DATA = \
     solang-layout.xml
 
-pixmapdir = $(datadir)/$(PACKAGE_NAME)/pixmaps
+pixmapdir = $(datadir)/$(PACKAGE_TARNAME)/pixmaps
 pixmap_DATA = \
     mode-browse-16.png \
     mode-browse-22.png \
@@ -18,7 +18,7 @@ pixmap_DATA = \
     tag-new-22.png \
     tag-new-24.png
 
-uidir = $(datadir)/$(PACKAGE_NAME)/ui
+uidir = $(datadir)/$(PACKAGE_TARNAME)/ui
 ui_DATA = \
     solang.ui \
     solang-enlarged-renderer.ui \
