--- a/configure.ac
+++ b/configure.ac
@@ -26,8 +26,9 @@ AM_PROG_LIBTOOL
 
 
 PKG_CHECK_MODULES(CAIROMM, [cairomm-1.0])
-PKG_CHECK_MODULES(EXIV2, [exiv2])
-PKG_CHECK_MODULES(GDAMM, [libgdamm-3.0])
+PKG_CHECK_MODULES(EXIV2, [exiv2 <= 0.17.1])
+PKG_CHECK_MODULES(GDAMM, [libgdamm-3.0 <= 3.0.1])
+PKG_CHECK_MODULES(GDA_SQLITE, [libgda-sqlite-3.0])
 PKG_CHECK_MODULES(GDL, [gdl-1.0])
 PKG_CHECK_MODULES(GIOMM, [giomm-2.4])
 PKG_CHECK_MODULES(GLIBMM, [glibmm-2.4])
