--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,11 +2,15 @@
 
 src/application/engine.cpp
 src/application/main-window.cpp
+src/attribute/date-manager.cpp
 src/attribute/property-manager.cpp
+src/attribute/search-basket.cpp
 src/attribute/tag-manager.cpp
 src/attribute/tag-new-dialog.cpp
 src/common/progress-dialog.cpp
+src/importer/camera-import-widget.cpp
 src/importer/directory-source.cpp
 src/importer/importer.cpp
 src/importer/importer-dialog.cpp
 src/renderer/browser-renderer.cpp
+src/renderer/enlarged-renderer.cpp
