Added a throbber and set cursor to Gdk::WATCH when busy.
MainWindow::set_busy can be used to control the busy state. The
Spinner and SpinnerToolItem widgets were translated to C++ from C code
written for gedit and Epiphany respectively.

The MainWindow is set to busy when rendering the photos.

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -28,6 +28,10 @@ libcommon_la_SOURCES = \
 	progress-dialog.h \
 	progress-observer.cpp \
 	progress-observer.h \
+	spinner.cpp \
+	spinner.h \
+	spinner-tool-item.cpp \
+	spinner-tool-item.h \
 	types.h
 
 AM_CPPFLAGS = \
