DirectorySource::create_photo_list improvements.
Use Glib::Dir to traverse the directory and only include photos in
the file list.

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -1,6 +1,8 @@
 noinst_LTLIBRARIES =	libcommon.la
 
 libcommon_la_SOURCES = \
+	content-type-repo.cpp \
+	content-type-repo.h \
 	error.cpp \
 	error.h \
 	id-base.h \
