Factored out creation of thumbnail PixbufPtr from PhotoPtr into a functor.

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -34,6 +34,8 @@ libcommon_la_SOURCES = \
 	spinner.h \
 	spinner-tool-item.cpp \
 	spinner-tool-item.h \
+	thumbbuf-maker.cpp \
+	thumbbuf-maker.h \
 	types.h
 
 AM_CPPFLAGS = \
