Added UI elements for navigating within the browser renderer.
Added a Go menu with following items:
    + Previous Page
    + Next Page
    + First Page
    + Last Page

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -26,6 +26,7 @@ pixmap_DATA = \
 uidir = $(datadir)/$(PACKAGE_TARNAME)/ui
 ui_DATA = \
     solang.ui \
+    solang-browser-renderer.ui \
     solang-enlarged-renderer.ui \
     solang-tag-manager.ui \
     solang-importer.ui \
