--- a/configure.ac
+++ b/configure.ac
@@ -26,7 +26,7 @@ AM_PROG_LIBTOOL
 
 
 PKG_CHECK_MODULES(CAIROMM, [cairomm-1.0])
-PKG_CHECK_MODULES(EXIV2, [exiv2 <= 0.17.1])
+PKG_CHECK_MODULES(EXIV2, [exiv2 >= 0.18])
 PKG_CHECK_MODULES(GDAMM, [libgdamm-3.0 <= 3.0.1])
 PKG_CHECK_MODULES(GDA_SQLITE, [libgda-sqlite-3.0])
 PKG_CHECK_MODULES(GDL, [gdl-1.0])
