Basic functional Flickr source.
Used a custom FlickrChooserButton instead of a Gtk::ComboBoxEntry as
the browser widget, which is no longer a member of FlickrSource and
its lifetime is controlled by its parent using Gtk::manage.

New dependencies have been introduced on Flickcurl, LibSoup and
WebKit Gtk+.

--- a/src/application/Makefile.am
+++ b/src/application/Makefile.am
@@ -21,11 +21,14 @@ solang_LDADD = \
 	$(top_builddir)/src/database/libdatabase.la \
 	$(top_builddir)/src/common/libcommon.la \
 	$(EXIV2_LIBS) \
+	$(FLICKCURL_LIBS) \
 	$(GPHOTO2_LIBS) \
 	$(GTKIMAGEVIEW_LIBS) \
+	$(WEBKIT_LIBS) \
 	$(GTKMM_LIBS) \
 	$(CAIROMM_LIBS) \
 	$(GDAMM_LIBS) \
+	$(SOUP_LIBS) \
 	$(GIOMM_LIBS) \
 	$(GLIBMM_LIBS) \
 	$(GDL_LIBS) \
@@ -47,6 +50,7 @@ AM_CPPFLAGS = \
 	$(SOLANG_CFLAGS) \
 	$(CAIROMM_CFLAGS) \
 	$(EXIV2_CFLAGS) \
+	$(FLICKCURL_CFLAGS) \
 	$(GPHOTO2_CFLAGS) \
 	$(GTKIMAGEVIEW_CFLAGS) \
 	$(GTKMM_CFLAGS) \
