--- a/configure.ac
+++ b/configure.ac
@@ -27,6 +27,7 @@ AM_PROG_LIBTOOL
 
 PKG_CHECK_MODULES(CAIROMM, [cairomm-1.0])
 PKG_CHECK_MODULES(EXIV2, [exiv2 >= 0.18])
+PKG_CHECK_MODULES(FLICKCURL, [flickcurl])
 PKG_CHECK_MODULES(GDAMM, [libgdamm-3.0 <= 3.0.1])
 PKG_CHECK_MODULES(GDA_SQLITE, [libgda-sqlite-3.0])
 PKG_CHECK_MODULES(GDL, [gdl-1.0])
@@ -40,6 +41,8 @@ PKG_CHECK_MODULES(IMAGEMAGICK, [GraphicsMagick++],,
     [PKG_CHECK_MODULES(IMAGEMAGICK, [ImageMagick++])])
 
 PKG_CHECK_MODULES(SIGC, [sigc++-2.0])
+PKG_CHECK_MODULES(SOUP, [libsoup-2.4])
+PKG_CHECK_MODULES(WEBKIT, [webkit-1.0])
 
 
 AC_OUTPUT([
