--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -8,6 +8,8 @@ src/attribute/search-basket.cpp
 src/attribute/tag-manager.cpp
 src/attribute/tag-new-dialog.cpp
 src/common/progress-dialog.cpp
+src/editor/editor.cpp
+src/editor/save-photos-window.cpp
 src/importer/camera-import-widget.cpp
 src/importer/directory-source.cpp
 src/importer/flickr-auth-dialog.cpp
@@ -17,6 +19,7 @@ src/importer/flickr-source.cpp
 src/importer/importer.cpp
 src/importer/importer-dialog.cpp
 src/renderer/browser-renderer.cpp
+src/renderer/editor-renderer.cpp
 src/renderer/enlarged-renderer.cpp
 src/renderer/pagination-bar.cpp
 src/renderer/zoomer.cpp
