--- a/src/attribute/Makefile.am
+++ b/src/attribute/Makefile.am
@@ -45,7 +45,7 @@ libattribute_la_SOURCES = \
 	thumbnail.h	
 
 AM_CPPFLAGS = \
-       	-DPACKAGE_LOCALE_DIR=\"${SOLANG_LOCALE_DIR}\" \
+	-DPACKAGE_LOCALE_DIR=\""${datadir}/locale"\" \
 	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 	-I$(top_builddir) \
