--- a/src/editor/Makefile.am
+++ b/src/editor/Makefile.am
@@ -17,7 +17,7 @@ libeditor_la_SOURCES = \
 	save-photos-window.h
 
 AM_CPPFLAGS = \
-	-DPACKAGE_LOCALE_DIR=\"${SOLANG_LOCALE_DIR}\" \
+	-DPACKAGE_LOCALE_DIR=\""${datadir}/locale"\" \
 	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 	-I$(top_builddir) \
