--- a/src/application/Makefile.am
+++ b/src/application/Makefile.am
@@ -36,7 +36,7 @@ solang_LDADD = \
 	$(SIGC_LIBS)
 
 AM_CPPFLAGS = \
-	-DPACKAGE_LOCALE_DIR=\"${SOLANG_LOCALE_DIR}\" \
+	-DPACKAGE_LOCALE_DIR=\""${datadir}/locale"\" \
 	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 	-DPACKAGE_DOC_DIR=\""$(docdir)"\" \
