--- a/src/database/Makefile.am
+++ b/src/database/Makefile.am
@@ -25,7 +25,7 @@ libdatabase_la_SOURCES = \
 	thumbnails-table.h
 
 AM_CPPFLAGS = \
-       	-DPACKAGE_LOCALE_DIR=\"${SOLANG_LOCALE_DIR}\" \
+	-DPACKAGE_LOCALE_DIR=\""${datadir}/locale"\" \
 	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
 	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 	-I$(top_builddir) \
