Basic slideshowing support.
+ A new SlideshowRenderer is used to renderer the photos within a
  separate SlideshowWindow.
+ Slideshows can be started from the browser and editor renderers.
+ New icons from Eye of GNOME.

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -22,6 +22,12 @@ pixmap_DATA = \
 	mode-image-edit-22.png \
 	mode-image-edit-24.png \
 	stock-resize-16.png \
+	slideshow-play-16.png \
+	slideshow-play-22.png \
+	slideshow-play-24.png \
+	slideshow-play-32.png \
+	slideshow-play-48.png \
+	slideshow-play.svg \
 	tag-16.png \
 	tag-22.png \
 	tag-new-16.png \
@@ -43,6 +49,8 @@ ui_DATA = \
 	solang-enlarged-renderer.ui \
 	solang-tag-manager.ui \
 	solang-importer.ui \
+	solang-slideshow.ui \
+	solang-slideshow-renderer.ui \
 	solang-thumbnail-popup.ui
 
 EXTRA_DIST = \
