--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -22,4 +22,6 @@ src/renderer/browser-renderer.cpp
 src/renderer/editor-renderer.cpp
 src/renderer/enlarged-renderer.cpp
 src/renderer/pagination-bar.cpp
+src/renderer/slideshow-renderer.cpp
+src/renderer/slideshow-window.cpp
 src/renderer/zoomer.cpp
