--- a/src/editor/Makefile.am
+++ b/src/editor/Makefile.am
@@ -1,20 +1,44 @@
 noinst_LTLIBRARIES =	libeditor.la
 
 libeditor_la_SOURCES = \
+	brightness-widget.cpp \
+	brightness-widget.h \
+	contrast-widget.cpp \
+	contrast-widget.h \
+	desaturate.cpp \
+	desaturate.h \
+	desaturate-widget.cpp \
+	desaturate-widget.h \
 	edit-action.cpp \
 	edit-action.h \
 	edit-action-history.cpp \
 	edit-action-history.h \
+	edit-action-widget.cpp \
+	edit-action-widget.h \
 	editable-photo.cpp \
 	editable-photo.h \
+	editor-toolbar.cpp \
+	editor-toolbar.h \
 	editor.cpp \
 	editor.h \
 	flip.cpp \
 	flip.h \
+	flip-widget.cpp \
+	flip-widget.h \
+	gegl-operation.cpp \
+	gegl-operation.h \
+	rotate-widget.cpp \
+	rotate-widget.h \
 	rotate.cpp \
 	rotate.h \
 	save-photos-window.cpp \
-	save-photos-window.h
+	save-photos-window.h \
+	scale.cpp \
+	scale.h \
+	scale-widget.cpp \
+	scale-widget.h \
+	stock-button.cpp \
+	stock-button.h
 
 AM_CPPFLAGS = \
 	-DPACKAGE_LOCALE_DIR=\""${datadir}/locale"\" \
@@ -25,6 +49,7 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/src/attribute \
 	-I$(top_srcdir)/src/common \
 	-I$(top_srcdir)/src/database \
+	-I$(top_srcdir)/src/edit-engine \
 	-I$(top_srcdir)/src/editor \
 	-I$(top_srcdir)/src/importer \
 	-I$(top_srcdir)/src/renderer \
@@ -36,6 +61,7 @@ AM_CPPFLAGS = \
 	$(GIOMM_CFLAGS) \
 	$(GLIBMM_CFLAGS) \
 	$(GDL_CFLAGS) \
+	$(GEGL_CFLAGS) \
 	$(SIGC_CFLAGS)
 
 AM_CXXFLAGS = \
