--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -71,12 +71,9 @@ AM_CPPFLAGS = \
 	$(FLICKCURL_CFLAGS) \
 	$(GTKMM_CFLAGS) \
 	$(GDAMM_CFLAGS) \
-	$(GIOMM_CFLAGS) \
-	$(GLIBMM_CFLAGS) \
 	$(GDL_CFLAGS) \
 	$(GEGL_CFLAGS) \
-	$(BABL_CFLAGS) \
-	$(SIGC_CFLAGS)
+	$(BABL_CFLAGS)
 
 AM_CXXFLAGS = \
 	 -Wall
