--- a/src/editor/Makefile.am
+++ b/src/editor/Makefile.am
@@ -58,11 +58,8 @@ AM_CPPFLAGS = \
 	$(EXIV2_CFLAGS) \
 	$(GTKMM_CFLAGS) \
 	$(GDAMM_CFLAGS) \
-	$(GIOMM_CFLAGS) \
-	$(GLIBMM_CFLAGS) \
 	$(GDL_CFLAGS) \
-	$(GEGL_CFLAGS) \
-	$(SIGC_CFLAGS)
+	$(GEGL_CFLAGS)
 
 AM_CXXFLAGS = \
 	 -Wall
