--- a/src/storage/Makefile.am
+++ b/src/storage/Makefile.am
@@ -25,10 +25,7 @@ AM_CPPFLAGS = \
 	$(EXIV2_CFLAGS) \
 	$(GTKMM_CFLAGS) \
 	$(GDAMM_CFLAGS) \
-	$(GIOMM_CFLAGS) \
-	$(GLIBMM_CFLAGS) \
-	$(GDL_CFLAGS) \
-	$(SIGC_CFLAGS)
+	$(GDL_CFLAGS)
 
 AM_CXXFLAGS = \
 	 -Wall
