--- a/src/attribute/Makefile.am
+++ b/src/attribute/Makefile.am
@@ -61,11 +61,8 @@ AM_CPPFLAGS = \
 	$(EXIV2_CFLAGS) \
 	$(GTKMM_CFLAGS) \
 	$(GDAMM_CFLAGS) \
-	$(GIOMM_CFLAGS) \
-	$(GLIBMM_CFLAGS) \
 	$(GDL_CFLAGS) \
-	$(LIBXML_CFLAGS) \
-	$(SIGC_CFLAGS)
+	$(LIBXML_CFLAGS)
 
 AM_CXXFLAGS = \
 	 -Wall
