--- a/src/database/Makefile.am
+++ b/src/database/Makefile.am
@@ -40,11 +40,7 @@ AM_CPPFLAGS = \
 	$(EXIV2_CFLAGS) \
 	$(GTKMM_CFLAGS) \
 	$(GDAMM_CFLAGS) \
-	$(GIOMM_CFLAGS) \
-	$(GLIBMM_CFLAGS) \
-	$(GDL_CFLAGS) \
-	$(IMAGEMAGICK_CFLAGS) \
-	$(SIGC_CFLAGS)
+	$(GDL_CFLAGS)
 
 AM_CXXFLAGS = \
 	 -Wall
