--- a/src/renderer/Makefile.am
+++ b/src/renderer/Makefile.am
@@ -41,17 +41,13 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/src/renderer \
 	-I$(top_srcdir)/src/storage \
 	$(SOLANG_CFLAGS) \
-	$(CAIROMM_CFLAGS) \
 	$(EXIV2_CFLAGS) \
 	$(GTKIMAGEVIEW_CFLAGS) \
 	$(GTKMM_CFLAGS) \
 	$(GDAMM_CFLAGS) \
-	$(GIOMM_CFLAGS) \
-	$(GLIBMM_CFLAGS) \
 	$(GDL_CFLAGS) \
 	$(BABL_CFLAGS) \
-	$(GEGL_CFLAGS) \
-	$(SIGC_CFLAGS)
+	$(GEGL_CFLAGS)
 
 AM_CXXFLAGS = \
 	 -Wall
