Carried out some housekeeping.
Removed unused files:
    + src/edit-engine/desaturate-operation.cpp
    + src/edit-engine/desaturate-operation.h
    + src/edit-engine/flip-operation.cpp
    + src/edit-engine/flip-operation.h
    + src/edit-engine/scale-operation.cpp
    + src/edit-engine/scale-operation.h

--- a/src/edit-engine/Makefile.am
+++ b/src/edit-engine/Makefile.am
@@ -12,14 +12,10 @@ libeditengine_la_SOURCES = \
 	edit-engine.cpp \
 	filter.cpp \
 	filter.h \
-	flip-operation.cpp \
-	flip-operation.h \
 	load-file.cpp \
 	load-file.h \
 	operation.cpp \
-	operation.h \
-	scale-operation.cpp \
-	scale-operation.h
+	operation.h
 
 AM_CPPFLAGS = \
 	-DPACKAGE_LOCALE_DIR=\""${datadir}/locale"\" \
