Fixed configure.ac and Makefile.am.
+ Pass AC_PACKAGE_TARNAME to AM_INIT_AUTOMAKE instead of
  AC_PACKAGE_NAME.
+ Use only commits affecting the src directory to generate the
  AUTHORS as they are not likely to contain names of artists and
  translators.

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
 AC_INIT(Solang, 0.3, [solang-devel@nongnu.org], [solang])
 
-AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
+AM_INIT_AUTOMAKE(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
 AC_CONFIG_HEADERS([config.h])
 AM_MAINTAINER_MODE
 
