Ported to libgdamm-4.x
http://library.gnome.org/devel/libgda/stable/migration-2.html

--- a/configure.ac
+++ b/configure.ac
@@ -25,8 +25,8 @@ AM_PROG_LIBTOOL
 PKG_CHECK_MODULES(BABL, [babl])
 PKG_CHECK_MODULES(EXIV2, [exiv2 >= 0.18])
 PKG_CHECK_MODULES(FLICKCURL, [flickcurl])
-PKG_CHECK_MODULES(GDAMM, [libgdamm-3.0 <= 3.0.1])
-PKG_CHECK_MODULES(GDA_SQLITE, [libgda-sqlite-3.0])
+PKG_CHECK_MODULES(GDAMM, [libgdamm-4.0])
+PKG_CHECK_MODULES(GDA_SQLITE, [libgda-sqlite-4.0])
 PKG_CHECK_MODULES(GDL, [gdl-1.0])
 PKG_CHECK_MODULES(GEGL, [gegl])
 PKG_CHECK_MODULES(GPHOTO2, [libgphoto2])
