Basic functional Brasero destination
A new dependency has been introduced on Brasero >= 2.28.3.

--- a/configure.ac
+++ b/configure.ac
@@ -23,6 +23,7 @@ AM_PROG_LIBTOOL
 
 
 PKG_CHECK_MODULES(BABL, [babl])
+PKG_CHECK_MODULES(BRASERO, [libbrasero-burn >= 2.28.3])
 PKG_CHECK_MODULES(EXIV2, [exiv2 >= 0.18])
 PKG_CHECK_MODULES(FLICKCURL, [flickcurl])
 PKG_CHECK_MODULES(GDAMM, [libgdamm-4.0])
