Added a PixbufMaker with both async and sync capabilities
Modified the EnlargedRenderer to use the PixbufMaker for asynchronous
loading of Gdk::Pixbufs.

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -38,6 +38,8 @@ libcommon_la_SOURCES = \
 	photo-search-criteria.h \
 	plugin.cpp \
 	plugin.h \
+	pixbuf-maker.cpp \
+	pixbuf-maker.h \
 	progress-dialog.cpp \
 	progress-dialog.h \
 	progress-observer.cpp \
