Sanitized ProgressObserver usage
+ Every operation that uses a ProgressObserver should provide a
  description, number of events and set the current events to 0; and
  reset it on completion. It is good to check whether the pointer is
  0 or not.
+ ProgressObserver::reset now emits a separate Glib::Dispatcher which
  can be obtained though ProgressObserver::dispatcher_reset.
+ ProgressDialog and MainWindow::progress_ use the above dispatcher.
  ProgressDialog::reset is no longer needed and has been removed.
+ Do not expand MainWindow::progress_. Use Gtk::PACK_SHRINK instead.
  Only show it when it is in use.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -10,6 +10,7 @@ src/attribute/tag-manager.cpp
 src/attribute/tag-new-dialog.cpp
 src/common/histogram-viewer.cpp
 src/common/progress-dialog.cpp
+src/database/database.cpp
 src/edit-engine/brightness-operation.cpp
 src/edit-engine/buffer.cpp
 src/edit-engine/contrast-operation.cpp
