Dropped some more dependencies
No point in depending on flickcurl, libgphoto2, libsoup and
webkit-2.0 because we are not building the importers any more.

--- a/src/attribute/Makefile.am
+++ b/src/attribute/Makefile.am
@@ -55,8 +55,7 @@ AM_CPPFLAGS = \
 	$(DBUS_CFLAGS) \
 	$(GTKMM_CFLAGS) \
 	$(GDL_CFLAGS) \
-	$(TRACKER_CFLAGS) \
-	$(LIBXML_CFLAGS)
+	$(TRACKER_CFLAGS)
 
 AM_CXXFLAGS = \
 	 -Wall
