Basic free text search
Search for photos having a user-specified string in their URI.

--- a/src/attribute/Makefile.am
+++ b/src/attribute/Makefile.am
@@ -13,6 +13,8 @@ libattribute_la_SOURCES = \
 	date-view-model-column-record.h \
 	date-view.cpp \
 	date-view.h \
+	free-text.cpp \
+	free-text.h \
 	modification-date.cpp \
 	modification-date.h \
 	photo-tag.cpp \
