Basic functional Brasero destination
A new dependency has been introduced on Brasero >= 2.28.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -19,6 +19,7 @@ src/editor/flip-vert-operation.cpp
 src/editor/rotate-clock-operation.cpp
 src/editor/rotate-counter-operation.cpp
 src/editor/rotate-operation.cpp
+src/exporter/brasero-destination.cpp
 src/exporter/directory-destination.cpp
 src/exporter/exporter-dialog.cpp
 src/renderer/browser-renderer.cpp
